--- a/src/style/components/tile.scss
+++ b/src/style/components/tile.scss
@@ -5,13 +5,13 @@
   position: relative;
   height: 100%;
   padding: size(2);
-  background-image: linear-gradient(45deg, #efefef, #{map-deep-get($color-theme, light, bg)});
+  background-color: rgba(map-deep-get($color-theme, dark, bg), 0.05);
   border-radius: 3px;
   text-decoration: none;
   transition: transform 200ms ease;
 
   @media (prefers-color-scheme: dark) {
-    background-image: linear-gradient(45deg, #191919, #{map-deep-get($color-theme, dark, bg)});
+    background-color: rgba(map-deep-get($color-theme, light, bg), 0.05);
   }
 
   > * {
@@ -25,12 +25,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(map-deep-get($color-theme, dark, bg), 0.05);
     opacity: 0;
     transition: opacity 300ms ease;
 
     @media (prefers-color-scheme: dark) {
-      background-color: rgba(0, 0, 0, 0.1);
+      background-color: rgba(map-deep-get($color-theme, light, bg), 0.05);
     }
   }
 
@@ -44,10 +44,6 @@
         opacity: 1;
       }
     }
-  }
-
-  @media (prefers-color-scheme: dark) {
-    border-color: rgba(255, 255, 255, 0.1);
   }
 
   &__body {
